Add random characters to page when someone presses the button

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,13 @@
 
     <button type="button">Button</button>
 
+    <p>
+      Here's some initial text for you. Wait for someone to press the button (or press it yourself)!
+    </p>
+
+    <!-- Text will load here -->
+    <p id="paragraph"></p>
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script src="index.js"></script>
